--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -197,31 +197,6 @@
 				<key>layout-id</key>
 				<integer>17</integer>
 			</dict>
-			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
-			<dict>
-				<key>AAPL,ig-platform-id</key>
-				<data>AwAiDQ==</data>
-				<key>device-id</key>
-				<data>EgQAAA==</data>
-				<key>disable-external-gpu</key>
-				<data>AQAAAA==</data>
-				<key>disable-hdmi-patches</key>
-				<data>AQAAAA==</data>
-				<key>enable-hdmi20</key>
-				<data>AQAAAA==</data>
-				<key>framebuffer-fbmem</key>
-				<data>AAAAAw==</data>
-				<key>framebuffer-patch-enable</key>
-				<data>AQAAAA==</data>
-				<key>framebuffer-stolenmem</key>
-				<data>AAAABA==</data>
-				<key>framebuffer-unifiedmem</key>
-				<data>AAAAgA==</data>
-				<key>hda-gfx</key>
-				<string>onboard-1</string>
-				<key>force-online</key>
-				<data>AQAAAA==</data>
-			</dict>
 		</dict>
 		<key>Delete</key>
 		<dict/>
@@ -546,7 +521,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Jg==</data>
 				<key>boot-args</key>
-				<string>-v</string>
+				<string>-v shikigva=80</string>
 				<key>csr-active-config</key>
 				<data>AwAAAA==</data>
 				<key>prev-lang:kbd</key>
@@ -609,17 +584,17 @@
 			<key>AdviseWindows</key>
 			<false/>
 			<key>MLB</key>
-			<string></string>
+			<string>C024295014NG2Y71M</string>
 			<key>ROM</key>
-			<data>ABEiM0RV</data>
+			<data>+LFWwLi3</data>
 			<key>SpoofVendor</key>
 			<true/>
 			<key>SystemProductName</key>
 			<string>iMac15,1</string>
 			<key>SystemSerialNumber</key>
-			<string></string>
+			<string>C02N3013FY10</string>
 			<key>SystemUUID</key>
-			<string></string>
+			<string>08134965-C2D2-4665-B6B5-BF84ADCCA289</string>
 		</dict>
 		<key>SMBIOS</key>
 		<dict>
